# greenhouse-db

./: .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  setup-uv.sh  start_api_server.sh
alembic/: env.py
alembic/versions/: 267161d1d96c_create_tables_schema.py  b13edc5c9ddc_add_tables_with_schema.py  b4078bee4992_add_tables_with_schema.py  c7b6fb9e8688_create_tables.py  de51e04774ac_create_tables_schema.py
app/: auth.py  main.py
app/routers/: postgresDb.py  secure.py
src/models/: base.py
src/models/orm/: .locations.py.swp  __init__.py  devices.py  devices_ref.py  locations.py  measurements.py  plants.py
src/shell/: start_api_server.sh
src/sql/: seed_db.ddl  seed_db_tomato.ddl
