[project]
name = "greenhouse-db"
version = "0.1.0"
description = "Database and API project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.50",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.49.0",
]
